--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="conteiner">
         <div class="row">
             <h1>Hola esto fuciona</h1>
+            <h2>Ver si funciona las cosas </h2>
         </div>
     </div>
 </body>
