--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div class="row">
             <h1>Hola esto fuciona</h1>
             <h2>Ver si funciona las cosas </h2>
+            <h2>ver si funcion </h2>
         </div>
     </div>
 </body>
